Fix Javac warning due to deprecation of newInstance